// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAlignment should keep wrapped-component styling 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1rem",
      "marginTop": "0.3125rem",
      "verticalAlign": "top",
    }
  }
>
  <div
    style={
      Object {
        "float": "right",
      }
    }
  >
    test lineHeight 
    1.625rem
     and iconsSize 
    1rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1rem",
      "marginTop": "0.0625rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.125rem
     and iconsSize 
    1rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 2`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.125rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 3`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1rem",
      "marginTop": "0.125rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.25rem
     and iconsSize 
    1rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 4`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.25rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 5`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1rem",
      "marginTop": "0.3125rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.625rem
     and iconsSize 
    1rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 6`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0.0625rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.625rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 7`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1rem",
      "marginTop": "0.46875rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.9375rem
     and iconsSize 
    1rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 8`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0.21875rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    1.9375rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 9`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1rem",
      "marginTop": "0.71875rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    2.4375rem
     and iconsSize 
    1rem
  </div>
</span>
`;

exports[`withAlignment should render correctly 10`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "lineHeight": "1.5rem",
      "marginTop": "0.46875rem",
      "verticalAlign": "top",
    }
  }
>
  <div>
    test lineHeight 
    2.4375rem
     and iconsSize 
    1.5rem
  </div>
</span>
`;

exports[`withAlignment should wrap the component display name 1`] = `
<div>
  <withAlignment(Component) />
</div>
`;
